--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -58,6 +58,12 @@
                         <a class="page-scroll" href="#disciplines">Disciplines</a>
                     </li>
                     <li>
+                      <a class="page-scroll" href="#events">Events</a>
+                    </li>
+                    <li>
+                      <a class="page-scroll" href="#tools">Tools</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
@@ -80,10 +86,6 @@
             </div>
         </div>
     </header>
-
-
-
-
 
     <section class="no-padding" id="disciplines">
         <div class="container-fluid">
@@ -138,8 +140,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section id="contact">
         <div class="container">
