--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -61,7 +61,7 @@
                       <a class="page-scroll" href="#events">Events</a>
                     </li>
                     <li>
-                      <a class="page-scroll" href="#tools">Tools</a>
+                      <a class="page-scroll" href="#resources">Resources</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
