--- a/resources/templates/resources.html
+++ b/resources/templates/resources.html
@@ -1,3 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
 {% load static %}
+{% block title %}Resources - Potsdam Strength{% endblock %}
