Slight tweaks to the contact information at bottom

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -106,6 +106,7 @@
                     <div class="col-lg-4 col-md-6 text-center">
                         <i class="fa fa-facebook-square fa-3x sr-contact"></i>
                         <p>Check out our Facebook page!</p>
+                        <p>Comment and ask us questions!</p>
                     </div>
                 </a>
                 <a href="https://www.instagram.com/">
