--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -45,28 +45,33 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                   <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
               </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Potsdam Strength</a>
+                <a class="navbar-brand page-scroll" href="{% url 'home' %}">Potsdam Strength</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a href="{% url 'about' %}">About</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#disciplines">Disciplines</a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">Olympic Weightlifting</a></li>
+                          <li><a href="#">Powerlifting</a></li>
+                          <li><a href="#">Calesthenics</a></li>
+                        </ul>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#disciplines">Disciplines</a>
+                        <a href="{% url 'events' %}" href="#events">Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#events">Events</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#resources">Resources</a>
+                        <a href="{% url 'resources' %}" href="#resources">Resources</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="">Join</a>
+                        <a href="{% url 'join' %}">Join</a>
                     </li>
                 </ul>
             </div>
