--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -4,6 +4,60 @@
 
 {% block title %}Home - Potsdam Strength{% endblock %}
 
+{% block header %}
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-ride-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-ride-to="1"></li>
+    <li data-target="#myCarousel" data-ride-to="2"></li>
+    <li data-target="#myCarousel" data-ride-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="{% static 'img/potsdam_people.jpg' %}"  alt="Potsdam Pride">
+      <div class="carousel-caption">
+        <h3>Potsdam Pride</h3>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="{% static 'img/potsdam_overview.jpg' %}"  alt="Potsdam Overview">
+      <div class="carousel-caption">
+        <h3>Potsdam</h3>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="{% static 'img/bowman.jpg' %}"  alt="Bowman Hall">
+      <div class="carousel-caption">
+        <h3>Bowman Hall</h3>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="{% static 'img/pac.jpg' %}"  alt="PAC">
+      <div class="carousel-caption">
+        <h3>PAC</h3>
+        <p>Where legendary musicians are born.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-ride="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-ride="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+{% endblock %}
+
 {% block section %}
 <section class="no-padding" id="disciplines">
     <div class="container-fluid">
